<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimerActivity">

    <TextView
        android:id="@+id/remaining_seconds_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="100sp"
        android:textStyle="bold"
        android:text="99"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        style="?textBody"
        android:id="@+id/timer_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/timer_pause_button"
        app:layout_constraintTop_toBottomOf="@id/remaining_seconds_textview" />

    <Button
        style="?textBody"
        android:id="@+id/timer_pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        app:layout_constraintStart_toEndOf="@id/timer_back_button"
        app:layout_constraintEnd_toStartOf="@id/timer_forth_button"
        app:layout_constraintTop_toBottomOf="@id/remaining_seconds_textview" />

    <Button
        style="?textBody"
        android:id="@+id/timer_forth_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forth"
        app:layout_constraintStart_toEndOf="@id/timer_pause_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remaining_seconds_textview" />

</androidx.constraintlayout.widget.ConstraintLayout>